# dotpong

./: .gitignore  Cargo.toml  README.md  config.json  justfile  metrics.py  run.sh
specs/: westend-chain_spec.json
src/: data.rs  lib.rs  logs.rs  main.rs  web.rs
templates/: index.html
