[package]
name = "dotpong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
reqwest = { version = "0.12.4", features = ["json"] }
scale-value = "0.14.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
subxt = { version = "0.35.3", features = ["subxt-lightclient", "unstable-light-client"] }
subxt-signer = "0.35.3"
tokio = { version = "1.37.0", features = ["full"] }
