[package]
name = "dotpong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }
scale-value = "0.18.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
subxt = { version = "0.38.0", features = ["subxt-lightclient", "unstable-light-client"] }
subxt-signer = "0.38.0"
tokio = { version = "1.42.0", features = ["full"] }
