[package]
name = "dotpong"
version = "0.1.0"
edition = "2021"
default-run = "dotpong"

[dependencies]
anyhow = "1.0"
askama = "0.14"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
rand = "0.8"
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subxt = "0.44"
subxt-signer = "0.44"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
